--- a/index.html
+++ b/index.html
@@ -1,117 +1,97 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Math Maze Forest Quest</title>
+  <title>Math Maze Game</title>
   <style>
-    body {
-      margin: 0;
-      background-color: #222;
-      font-family: sans-serif;
-      color: white;
-      text-align: center;
-    }
     canvas {
+      border: 2px solid #333;
       display: block;
-      margin: 0 auto;
+      margin: 20px auto;
+      background-color: #eee;
+    }
+    body {
+      text-align: center;
+      font-family: Arial, sans-serif;
     }
   </style>
 </head>
 <body>
-  <h1>🌲 Math Maze: Forest Quest 🌲</h1>
-  <p>Use arrow keys to move. Answer math questions to reveal the forest path!</p>
-  <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
+  <h1>Math Maze Game</h1>
+  <canvas id="mazeCanvas" width="600" height="400"></canvas>
+
   <script>
-    const config = {
-      type: Phaser.AUTO,
-      width: 640,
-      height: 480,
-      backgroundColor: '#88cc88',
-      physics: {
-        default: 'arcade',
-        arcade: {
-          debug: false
-        }
-      },
-      scene: {
-        preload,
-        create,
-        update
-      }
-    };
+    const canvas = document.getElementById("mazeCanvas");
+    const ctx = canvas.getContext("2d");
+    const tileSize = 40;
+    const rows = 10;
+    const cols = 15;
 
-    const game = new Phaser.Game(config);
-
-    let player;
-    let cursors;
-    let clouds = [];
-    let questions = [
-      {q: "3 + 4 = ?", a: 7},
-      {q: "6 x 2 = ?", a: 12},
-      {q: "9 - 5 = ?", a: 4},
-      {q: "5 + 6 = ?", a: 11}
+    const maze = [
+      [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],
+      [1,0,0,0,1,0,0,0,1,0,0,0,0,0,1],
+      [1,0,1,0,1,0,1,0,1,0,1,1,1,0,1],
+      [1,0,1,0,0,0,1,0,0,0,1,0,1,0,1],
+      [1,0,1,1,1,1,1,1,1,0,1,0,1,0,1],
+      [1,0,0,0,0,0,0,0,1,0,0,0,1,0,1],
+      [1,1,1,1,1,1,1,0,1,1,1,0,1,0,1],
+      [1,0,0,0,0,0,1,0,0,0,1,0,0,0,1],
+      [1,0,1,1,1,0,1,1,1,0,1,1,1,0,1],
+      [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],
     ];
-    let currentCloud = 0;
 
-    function preload() {
-      this.load.image('player', 'https://labs.phaser.io/assets/sprites/phaser-dude.png');
-      this.load.image('cloud', 'https://labs.phaser.io/assets/particles/cloud.png');
-      this.load.image('grass', 'https://labs.phaser.io/assets/skies/sky4.png');
-    }
+    let player = { row: 1, col: 1 };
 
-    function create() {
-      this.add.image(320, 240, 'grass');
-
-      player = this.physics.add.image(320, 440, 'player');
-      player.setCollideWorldBounds(true);
-
-      cursors = this.input.keyboard.createCursorKeys();
-
-      // Add cloud blocks at fixed positions
-      let cloudPositions = [
-        {x: 320, y: 360},
-        {x: 320, y: 280},
-        {x: 320, y: 200},
-        {x: 320, y: 120}
-      ];
-
-      cloudPositions.forEach(pos => {
-        let cloud = this.physics.add.image(pos.x, pos.y, 'cloud').setScale(0.5);
-        cloud.blocked = true;
-        clouds.push(cloud);
-      });
-    }
-
-    function update() {
-      player.setVelocity(0);
-
-      if (cursors.up.isDown) {
-        let nextCloud = clouds[currentCloud];
-        if (nextCloud && Phaser.Math.Distance.Between(player.x, player.y, nextCloud.x, nextCloud.y) < 20) {
-          askQuestion(nextCloud);
-        } else {
-          player.y -= 2;
+    function drawMaze() {
+      for (let row = 0; row < rows; row++) {
+        for (let col = 0; col < cols; col++) {
+          if (maze[row][col] === 1) {
+            ctx.fillStyle = "#444";
+          } else {
+            ctx.fillStyle = "#fff";
+          }
+          ctx.fillRect(col * tileSize, row * tileSize, tileSize, tileSize);
+          ctx.strokeRect(col * tileSize, row * tileSize, tileSize, tileSize);
         }
-      } else if (cursors.down.isDown) {
-        player.y += 2;
-      } else if (cursors.left.isDown) {
-        player.x -= 2;
-      } else if (cursors.right.isDown) {
-        player.x += 2;
+      }
+      // Draw player
+      ctx.fillStyle = "blue";
+      ctx.beginPath();
+      ctx.arc(player.col * tileSize + tileSize / 2, player.row * tileSize + tileSize / 2, tileSize / 4, 0, Math.PI * 2);
+      ctx.fill();
+    }
+
+    function movePlayer(deltaRow, deltaCol) {
+      const newRow = player.row + deltaRow;
+      const newCol = player.col + deltaCol;
+      if (maze[newRow][newCol] === 0) {
+        player.row = newRow;
+        player.col = newCol;
+        checkForQuestion();
+        drawMaze();
       }
     }
 
-    function askQuestion(cloud) {
-      let q = questions[currentCloud];
-      let answer = prompt(q.q);
-      if (parseInt(answer) === q.a) {
-        cloud.destroy();
-        currentCloud++;
-        alert("Correct! The path clears...");
-      } else {
-        alert("Oops! Try again.");
+    function checkForQuestion() {
+      if ((player.row === 3 && player.col === 4) || (player.row === 7 && player.col === 7)) {
+        const answer = prompt("What is 6 + 7?");
+        if (answer !== "13") {
+          alert("Wrong answer! Try again.");
+          player.row -= 1; // move back as penalty
+        } else {
+          alert("Correct! Path unlocked.");
+        }
       }
     }
+
+    document.addEventListener("keydown", (e) => {
+      if (e.key === "ArrowUp") movePlayer(-1, 0);
+      else if (e.key === "ArrowDown") movePlayer(1, 0);
+      else if (e.key === "ArrowLeft") movePlayer(0, -1);
+      else if (e.key === "ArrowRight") movePlayer(0, 1);
+    });
+
+    drawMaze();
   </script>
 </body>
 </html>
